Contractor mapper, service, repository - refactoring